[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openedx-course-catalog-cache"
version = "0.1.0"
description = "Open edX server-side cached proxy for courses API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
dependencies = ["requests"]

[tool.setuptools]
packages = ["course_catalog_cache"]
